--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
     <p>Click the following links to view the assignments of the respective subjects!</p>
 <ul>
   
-  <li><a href="esiot.html">ESIOT</a></li><br>
-  <li><a href="smd.html">SMD</a></li><br>
-  <li><a href="spos.html">SPOS</a></li><br>
-  <li><a href="wt.html">WT</a></li><br>
+ 
+  <li><a href="https://github.com/Benke09/demo/commit/bfa9e1111c25559bd705354658253a05552d5dfb">WT</a></li><br>
   
 
 </ul>
